<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light1"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-53dp">

    <!-- Title -->

    <!-- Card Logos -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/payment_methods"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/logoRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_visa" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_mastercard" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_paypal" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_discover" />
    </LinearLayout>

    <!-- Card Number -->
    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="393dp"
        android:layout_height="56dp"
        android:layout_margin="12dp"
        android:hint="@string/card_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoRow" />

    <!-- Expiry Date -->
    <EditText
        android:id="@+id/etExpireDate"
        android:layout_width="393dp"
        android:layout_height="57dp"
        android:layout_margin="12dp"
        android:hint="@string/expire_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCardNumber" />

    <!-- CVV -->
    <EditText
        android:id="@+id/etCvv"
        android:layout_width="388dp"
        android:layout_height="58dp"
        android:layout_margin="12dp"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etExpireDate" />

    <!-- Card Holder Name -->
    <EditText
        android:id="@+id/etHolderName"
        android:layout_width="390dp"
        android:layout_height="58dp"
        android:layout_margin="12dp"
        android:hint="@string/card_holder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCvv" />

    <!-- Save Checkbox -->
    <CheckBox
        android:id="@+id/cbSaveCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHolderName" />

    <!-- Total Cost -->

    <!-- Pay Now Button -->

    <!-- Bottom Nav -->
    <Button
        android:id="@+id/btnPayNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green"
        android:text="@string/pay_now"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotal" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/total_cost"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbSaveCard" />

    <include
        android:id="@+id/includeBottom"
        layout="@layout/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
